Add ES6 objects and strings

--- a/ES6/ES6-Part-3/index.html
+++ b/ES6/ES6-Part-3/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
-        <script src="ES6-classes.js"></script>        
+        <script src="ES6-classes.js"></script>
+        <script src="ES6-objects.js"></script>
+        <script src="ES6-strings.js"></script>
     </head>
     <body>
 
