--- a/ES6/ES6-Part-3/index.html
+++ b/ES6/ES6-Part-3/index.html
@@ -3,6 +3,7 @@
         <script src="ES6-classes.js"></script>
         <script src="ES6-objects.js"></script>
         <script src="ES6-strings.js"></script>
+        <script src="ES6-arrays.js"></script>
     </head>
     <body>
 
