add content for hoisting variables fix index html to reference the renamed files

--- a/ES6/ES6-Part-3/index.html
+++ b/ES6/ES6-Part-3/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <script src="ES6-classes.js"></script>
-        <script src="ES6-objects.js"></script>
-        <script src="ES6-strings.js"></script>
-        <script src="ES6-arrays.js"></script>
+        <script src="1-ES6-classes.js"></script>
+        <script src="2-ES6-objects.js"></script>
+        <script src="3-ES6-strings.js"></script>
+        <script src="4-ES6-arrays.js"></script>
     </head>
     <body>
 
