--- a/ES6/ES6-Part-1/index.html
+++ b/ES6/ES6-Part-1/index.html
@@ -2,9 +2,9 @@
     <head>
         <!-- <script src="1-ES6-arrow-functions.js" type="text/javascript"></script> -->
         <!-- <script src="2-ES6-default-parameters.js" type="text/javascript"></script> -->
-        <script src="3-ES6-rest-spread.js" type="text/javascript"></script>
+        <!-- <script src="3-ES6-rest-spread.js" type="text/javascript"></script> -->
         <!-- <script src="4-ES6-object-literals.js" type="text/javascript"></script> -->
-        <!-- <script src="5-ES6-for-of-loops.js" type="text/javascript"></script> -->
+        <script src="5-ES6-for-of-loops.js" type="text/javascript"></script>
         <!-- <script src="6-ES6-template-literals.js" type="text/javascript"></script> -->
         <!-- <script src="7-ES6-destructuring.js" type="text/javascript"></script>         -->
     </head>
